@@ -4,9 +4,7 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -27,28 +25,59 @@
  * @test
  * @summary checking for permitted subtypes attribute at runtime
  * @modules jdk.compiler/com.sun.tools.javac.util
+ * @compile --enable-preview -source ${jdk.version} CheckingAttributeAtRuntimeTest.java
+ * @run main/othervm --enable-preview CheckingAttributeAtRuntimeTest
  */
 
+import java.lang.constant.*;
 import com.sun.tools.javac.util.Assert;
 
 public class CheckingAttributeAtRuntimeTest {
-    sealed class Sealed permits Sub {}
 
-    class Sub extends Sealed {}
+    sealed class Sealed1 permits Sub1 {}
 
-    sealed interface SealedI permits Sub2 {}
+    class Sub1 extends Sealed1 {}
 
-    class Sub2 implements SealedI {}
+    sealed interface SealedI1 permits Sub2 {}
+
+    class Sub2 implements SealedI1 {}
+
+    sealed class Sealed2 {}
+
+    class Sub3 extends Sealed2 {}
 
     public static void main(String... args) {
-        Class<?> sealedClass = Sealed.class;
-        Assert.check(sealedClass.isSealed());
-        Assert.check(sealedClass.getPermittedSubtypes().length == 1);
-        Assert.check(sealedClass.getPermittedSubtypes()[0] == Sub.class);
+        Class<?> sealedClass1 = Sealed1.class;
+        Assert.check(sealedClass1.isSealed());
+        Assert.check(sealedClass1.getPermittedSubtypes().length == 1);
+        Assert.check(sealedClass1.getPermittedSubtypes()[0].equals(ClassDesc.of("CheckingAttributeAtRuntimeTest").nested("Sub1")));
 
-        Class<?> sealedI = SealedI.class;
+        Class<?> sealedI = SealedI1.class;
         Assert.check(sealedI.isSealed());
         Assert.check(sealedI.getPermittedSubtypes().length == 1);
-        Assert.check(sealedI.getPermittedSubtypes()[0] == Sub2.class);
+        Assert.check(sealedI.getPermittedSubtypes()[0].equals(ClassDesc.of("CheckingAttributeAtRuntimeTest").nested("Sub2")));
+
+        Class<?> sealedClass2 = Sealed2.class;
+        Assert.check(sealedClass2.isSealed());
+        Assert.check(sealedClass2.getPermittedSubtypes().length == 1);
+        Assert.check(sealedClass2.getPermittedSubtypes()[0].equals(ClassDesc.of("CheckingAttributeAtRuntimeTest").nested("Sub3")));
+
+        Class<?> sealedClass3 = Sealed3.class;
+        Assert.check(sealedClass3.isSealed());
+        Assert.check(sealedClass3.getPermittedSubtypes().length == 1);
+        Assert.check(sealedClass3.getPermittedSubtypes()[0].equals(ClassDesc.of("Sub4")));
+
+        Class<?> sealedClass4 = Sealed4.class;
+        Assert.check(sealedClass4.isSealed());
+        Assert.check(sealedClass4.getPermittedSubtypes().length == 1);
+        Assert.check(sealedClass4.getPermittedSubtypes()[0].equals(ClassDesc.of("Sub5")));
     }
 }
+
+sealed class Sealed3 {}
+
+class Sub4 extends Sealed3 {}
+
+sealed class Sealed4 permits Sub5 {}
+
+class Sub5 extends Sealed4 {}
